依赖更新和微调菜单

--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -29,6 +29,7 @@
 /* stylelint-disable-next-line no-duplicate-selectors */
 :root {
   color-scheme: light;
+  --g-box-shadow-color: rgb(0 0 0 / 12%)
 
   &::view-transition-old(root),
   &::view-transition-new(root) {
@@ -44,10 +45,9 @@
     z-index: 9999;
   }
 
-  --g-box-shadow-color: rgb(0 0 0 / 12%);
-
   &.dark {
     color-scheme: dark;
+    --g-box-shadow-color: rgb(0 0 0 / 72%);
 
     &::view-transition-old(root) {
       z-index: 9999;
@@ -57,7 +57,6 @@
       z-index: 1;
     }
 
-    --g-box-shadow-color: rgb(0 0 0 / 72%);
   }
 }
 
