lang="scss" 删除 使用postcss-nested

--- a/plop-templates/module/list.hbs
+++ b/plop-templates/module/list.hbs
@@ -289,7 +289,7 @@ function onDel(row?: any) {
   </div>
 </template>
 
-<style lang="scss" scoped>
+<style scoped>
   .el-pagination {
     margin-top: 20px;
   }
