--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -72,10 +72,12 @@
   }
 }
 
-::-webkit-scrollbar {
+/*
+ #TODO 会导致fs-ant ui 操作栏样式错乱
+ ::-webkit-scrollbar {
   width: 12px;
   height: 12px;
-}
+} */
 
 ::-webkit-scrollbar-thumb {
   background-color: rgb(0 0 0 / 40%);
